fix : add like service, edit due to changes in requirement